[package]
name = "snowy_simple_logger"
version = "1.0.0"
authors = ["KrzysztofZawisla <zawislakrzysztof.zk@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/KrzysztofZawisla/snowy_simple_logger_python"

[lib]
name = "snowy_simple_logger"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8.5"
features = ["extension-module"]

[dependencies]
chrono = "0.4.10"
colorful = "0.2.1"
